# Misago

./: .gitignore  Dockerfile  Procfile  pyproject.toml  requirements.txt
devproject/: settings.py  urls.py
misago/: settings.py  urls.py
misago/locale/tr/LC_MESSAGES/: django.mo  django.po  djangojs.mo  djangojs.po
