[project]
name = "misago"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ariadne>=0.26.1",
    "ariadne-django>=0.3.0",
    "black>=25.1.0",
    "celery[redis]>=5.5.1",
    "coveralls>=4.0.1",
    "django~=4.2",
    "django-debug-toolbar>=5.1.0",
    "django-mptt>=0.17.0",
    "django-simple-sso>=1.2.0",
    "djangorestframework>=3.16.0",
    "faker>=37.1.0",
    "honeybadger>=0.22.0",
    "html5lib>=1.1",
    "markdown>=3.8",
    "pillow>=11.2.1",
    "psycopg[binary]>=3.2.6",
    "pyjwt>=2.10.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-django>=4.11.1",
    "pytest-mock>=3.14.0",
    "pytz>=2025.2",
    "requests>=2.32.3",
    "responses>=0.25.7",
    "ruff>=0.11.5",
    "social-auth-app-django>=5.4.3",
    "structlog>=25.2.0",
    "syrupy>=4.9.1",
    "unidecode>=1.3.8",
    "whitenoise>=6.9.0",
]
